--- a/glossary-frontend/src/app/module/term-domain/term-domain.component.html
+++ b/glossary-frontend/src/app/module/term-domain/term-domain.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button color="primary">Add</button> Term Domain
+<button mat-raised-button color="primary" (click)="onCreateClick()">Add</button> Term Domain
 <div class="margin-bottom-25"></div>
-<data-table *ngIf="dataSource" [columns]="columns" [dataSet]="dataSource"></data-table>
+<data-table *ngIf="dataSource" [columns]="columns" [dataSet]="dataSource" (eventRecordClick)="onRecordClick($event)"></data-table>
